# ChangeLog for dev-python/testtools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/testtools/ChangeLog,v 1.28 2011/04/16 16:03:55 armin76 Exp $

  16 Apr 2011; Raúl Porcel <armin76@gentoo.org> testtools-0.9.8.ebuild:
  ia64 stable wrt #343309

  10 Apr 2011; Tobias Klausmann <klausman@gentoo.org> testtools-0.9.8.ebuild:
  Stable on alpha, bug #343309

  25 Feb 2011; Christian Faulhammer <fauli@gentoo.org>
  -testtools-0.9.7.ebuild:
  clean up

  25 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  testtools-0.9.8.ebuild:
  ppc/ppc64 stable wrt #346985

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> testtools-0.9.8.ebuild:
  sparc stable wrt #346985

  05 Feb 2011; Markus Meier <maekke@gentoo.org> testtools-0.9.8.ebuild:
  arm stable, bug #346985

  22 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  testtools-0.9.8.ebuild:
  x86 stable wrt bug #346985

  13 Jan 2011; Jeroen Roovers <jer@gentoo.org> testtools-0.9.8.ebuild:
  Stable for HPPA (bug #346985).

  12 Jan 2011; Markos Chandras <hwoarang@gentoo.org> testtools-0.9.8.ebuild:
  Stable on amd64 wrt bug #346985

  04 Jan 2011; Michael Weber <xmw@gentoo.org> testtools-0.9.7.ebuild:
  sparc stable (bug 346985)

  18 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  -testtools-0.9.5.ebuild, -testtools-0.9.6.ebuild:
  clean up

*testtools-0.9.8 (18 Dec 2010)

  18 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  +testtools-0.9.8.ebuild:
  version bump, fixes test failures from bug 341683

*testtools-0.9.7 (17 Oct 2010)

  17 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +testtools-0.9.7.ebuild:
  Version bump. Install tests (bug #341095).

*testtools-0.9.6 (23 Sep 2010)

  23 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -testtools-0.9.4.ebuild, -files/testtools-0.9.4-fix_test.patch,
  +testtools-0.9.6.ebuild:
  Version bump.
