@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST testtools-0.9.10.tar.gz 109366 RMD160 d5547b7aa66959b5f3441309d5ec51f23dcd4eea SHA1 2c9e9ee98dd5ed76dac849111abe78f7dddcec97 SHA256 9d810506bcf58fa7d9da099be71210c00f77d9c316bc3b7f95209046cdd716af
 DIST testtools-0.9.8.tar.gz 85000 RMD160 f4fc62db9d8f3541d15aeded4e52ae880e102474 SHA1 e409586cd1c22b94098d808058da0e5b735a19cf SHA256 a440b5d9797755f2c7e4c9aa11364f92858d2504b1b8147287f85472644753ed
+EBUILD testtools-0.9.10.ebuild 1158 RMD160 107f1efa2a35d827cac76e405b3ef169a5322f6d SHA1 e80bb7ba178d018f251da04909eab2870c7f4c94 SHA256 143a8201ffc9b7cd8353f8f9a61f510aa6a3ce86b514102c17bf4d65d95e789e
 EBUILD testtools-0.9.8.ebuild 1150 RMD160 371f0a7cb6fae9a9bdd9dd9702a176521b060a6f SHA1 7bcb5fadd4c0afe5764ff4f0a082290ad7c82d7b SHA256 554b0deb802965cf64e255f97574b846f3362d3503c3ed874c126dd92e25049c
-MISC ChangeLog 3642 RMD160 5cff5e9621303353a422d539bb3368ae00807555 SHA1 c9818afdea95daa4ea959234182081ee6c3c6511 SHA256 08800670079e49c5554460224b6982b9687d9eba8ef7c7b381b4cb70feee3678
+MISC ChangeLog 3796 RMD160 ef257770138ec19f75691266235faef671d35fe4 SHA1 9211127abbcdd9ef9f1e96ead14a84589677da0b SHA256 12b58f5d1a09088b597c5a65d92428914045c43fc92c582e1c1612a4a3c622bd
 MISC metadata.xml 183 RMD160 3d7d3ef1c7fc2ad46c3bd8e2d8a728c8aac5d98e SHA1 467d0cbe06164e9a6b36ddf69790013d55b7d871 SHA256 37cf175469989020dfc412334d876157ffda2f766d2642104f8480a9e50ae51c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2pvf4ACgkQuQc30/atMkDonQCgmR85JY+wqglEdP44uULXgXaU
-AMcAoKDrwA2lQHljlRW2BVSsyQ9/iHbo
-=xxom
+iEYEARECAAYFAk2rBaYACgkQNQqtfCuFneNs1QCcDfvjZQ3f4zfAL/suP/3751nZ
+vWoAoJb6ZnghGlYqi7mLTzNGYU3ARarD
+=MOjb
 -----END PGP SIGNATURE-----
