@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/testtools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/testtools/ChangeLog,v 1.28 2011/04/16 16:03:55 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/testtools/ChangeLog,v 1.29 2011/04/17 15:22:08 fauli Exp $
+
+*testtools-0.9.10 (17 Apr 2011)
+
+  17 Apr 2011; Christian Faulhammer <fauli@gentoo.org>
+  +testtools-0.9.10.ebuild:
+  version bump for bug 363407 by sping
 
   16 Apr 2011; Raúl Porcel <armin76@gentoo.org> testtools-0.9.8.ebuild:
   ia64 stable wrt #343309
